fixed body whitespace issue when in mobile size

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,9 @@ body {
   height: 100%;
   width: 100%;
 }
+
+@media (max-width: 431px){
+  body {
+    padding-top: 3.5em;
+  }
+}
